# meshflow-contracts

./: .gitignore  CHANGELOG.md  README.md  RELEASING.md  build-constraints.txt  pyproject.toml  release_artifacts.py
.github/scripts/: release-tag-identity.sh
.github/workflows/: ci.yml  release-build.yml  release-dry-run.yml  release.yml
meshflow_contracts/: __init__.py  auth.py  manifest.py  observability.py
tests/: test_auth.py  test_manifest.py  test_packaging.py  test_release_artifacts.py  test_release_build_integration.py  test_release_workflow.py
