[project]
name = "meshflow-contracts"
version = "0.1.0"
description = "Shared MeshFlow platform contracts."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
